--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ header#main-header {
 nav li {
   display: inline-block;
   list-style: none;
-  margin-left: 20px; }
+  margin-right: 3%; }
 
 /* line 37, V3-prove-eksame/css/style.scss */
 nav a {
@@ -111,19 +111,46 @@ main#nyheder .main-container {
 main#nyheder img {
   width: 100%; }
 
-/* line 118, V3-prove-eksame/css/style.scss */
+/* line 113, V3-prove-eksame/css/style.scss */
+main#nyheder hr {
+  border-top: 2px dotted lightgrey; }
+
+/* line 119, V3-prove-eksame/css/style.scss */
+aside#sponsorer h4 {
+  font-size: 20px;
+  line-height: 60px;
+  background-color: lightgray;
+  border: 1px solid grey;
+  border-radius: 5px; }
+
+/* line 126, V3-prove-eksame/css/style.scss */
+aside#sponsorer img {
+  border: 1px solid grey;
+  border-radius: 5px;
+  padding-top: 5px; }
+
+/* line 131, V3-prove-eksame/css/style.scss */
+aside#sponsorer .text-center {
+  text-align: center; }
+
+/* line 136, V3-prove-eksame/css/style.scss */
 .footer-container {
   margin: auto;
   max-width: 900px;
   width: 100%;
   padding: 50px 0; }
 
-/* line 126, V3-prove-eksame/css/style.scss */
+/* line 144, V3-prove-eksame/css/style.scss */
 footer .border-right {
   border-right: 1px solid black; }
 
-/* line 129, V3-prove-eksame/css/style.scss */
+/* line 147, V3-prove-eksame/css/style.scss */
 footer .text-center {
   text-align: center; }
+
+@media screen and (max-width: 991px) {
+  /* line 153, V3-prove-eksame/css/style.scss */
+  aside.d-none {
+    display: none; } }
 
 /*# sourceMappingURL=style.css.map */
