Insert.php fetchDB.php connect.php

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* line 1, V3-prove-eksame/css/style.scss */
 body {
-  background-color: #bbb;
+  background-color: #EFEAE2;
   font-family: 'Raleway'; }
 
 /* line 6, V3-prove-eksame/css/style.scss */
