--- a/css/style.scss
+++ b/css/style.scss
@@ -1,156 +1,213 @@
-body {
-    background-color: #EFEAE2;
-    font-family: 'Raleway';
-}
-
-h1 {
-    font-size: 45px;
-}
-
-h1,
-h2,
-h3 {
-    font-family: 'Libre Baskerville';
-}
-
-header#main-header {
-    background-color: #FFC63C;
-}
-
-.header-container {
-    margin: auto;
-    max-width: 1366px;
-    width: 100%;
-}
-
-.margin-bot {
-    margin-bottom: 20px;
-}
-
-nav {
-    ul {}
-    li {
-        display: inline-block;
-        list-style: none;
-        margin-right: 3%;
+    body {
+        background-color: #EFEAE2;
+        font-family: 'Raleway';
     }
-    a {
-        text-decoration: none;
-        color: black;
+    
+    h1 {
+        font-size: 45px;
     }
-}
-
-.current {
-    text-decoration: underline;
-}
-
-input[type=text]#seach {
-    background-image: url(../img/searchicon.png);
-    background-repeat: no-repeat;
-    background-position: 100%;
-    padding: 5px;
-}
-
-input.log-in-box {
-    border: 1px solid grey;
-    padding: 5px;
-    border-radius: 5px;
-}
-
-button#log-in {
-    background-color: white;
-    padding: 5px;
-    border: 1px solid grey;
-    border-radius: 5px;
-}
-
-main#index {
-    .main-container {
-        margin: 25px auto 10px;
-        max-width: 1200px;
+    
+    h1,
+    h2,
+    h3,
+    h4 {
+        font-family: 'Libre Baskerville';
+    }
+    
+    header#main-header {
+        background-color: #FFC63C;
+    }
+    
+    .header-container {
+        margin: auto;
+        max-width: 1366px;
         width: 100%;
-        background-color: white;
-        padding: 10px 15px;
     }
-    article {
+    
+    .margin-bot {
+        margin-bottom: 20px;
+    }
+    
+    nav {
+        ul {}
+        li {
+            display: inline-block;
+            list-style: none;
+            margin-right: 3%;
+        }
+        a {
+            text-decoration: none;
+            color: black;
+        }
+    }
+    
+    .current {
+        text-decoration: underline;
+    }
+    
+    input[type=text]#seach {
+        background-image: url(../img/searchicon.png);
+        background-repeat: no-repeat;
+        background-position: 100%;
+        padding: 5px;
+    }
+    
+    input.log-in-box {
+        border: 1px solid grey;
+        padding: 5px;
+        border-radius: 5px;
+    }
+    
+    button#log-in {
+        background-color: white;
+        padding: 5px;
+        border: 1px solid grey;
+        border-radius: 5px;
+    }
+    
+    h4 {
+        margin-bottom: 5px;
+        font-size: 20px;
+    }
+    
+    .formGroup {
+        span {
+            font-size: 20px;
+        }
+        input {
+            background-color: white;
+            padding: 5px;
+            border: 1px solid grey;
+            border-radius: 5px;
+            width: 50%;
+            height: 25px;
+        }
+        textarea {
+            background-color: white;
+            padding: 5px;
+            border: 1px solid grey;
+            border-radius: 5px;
+            width: 50%;
+            height: 40px;
+        }
+    }
+    
+    button#log-out {
+        background-color: white;
+        padding: 5px;
+        border: 1px solid grey;
+        border-radius: 5px;
+        a {
+            text-decoration: none;
+            color: black;
+        }
+    }
+    
+    input.button-primary {
+        background-color: white;
+        padding: 5px;
+        margin: 5px 0;
+        border: 1px solid grey;
+        border-radius: 5px;
+        font-size: 20px;
+        text-decoration: underline;
+    }
+    
+    main#index {
+        .main-container {
+            margin: 25px auto 10px;
+            max-width: 1200px;
+            width: 100%;
+            background-color: white;
+            padding: 10px 15px;
+        }
+        article {
+            img {
+                width: 100%;
+            }
+        }
+        section {
+            padding: 20px;
+            margin-bottom: 10px;
+        }
+        section#dokumenter {
+            background-color: darkorange;
+            text-decoration: underline black;
+            color: black;
+        }
+        section#link {
+            background-color: lightblue;
+            text-decoration: underline black;
+            color: black;
+        }
+        section#marked {
+            background-color: dodgerblue;
+            text-decoration: underline black;
+            color: black;
+        }
+        section#events {
+            background-color: orange;
+            text-decoration: underline black;
+            color: black;
+        }
+    }
+    
+    footer#main-footer {
+        background-color: #FFC63C;
+    }
+    
+    main#nyheder {
+        .main-container {
+            margin: 25px auto 10px;
+            max-width: 1200px;
+            width: 100%;
+            background-color: white;
+            padding: 10px 15px;
+        }
         img {
             width: 100%;
         }
+        hr {
+            border-top: 2px dotted lightgrey;
+        }
     }
-    section {
-        padding: 20px;
-        margin-bottom: 10px;
+    
+    aside#sponsorer {
+        h4 {
+            font-size: 20px;
+            line-height: 60px;
+            background-color: lightgray;
+            border: 1px solid grey;
+            border-radius: 5px;
+        }
+        img {
+            border: 1px solid grey;
+            border-radius: 5px;
+            padding-top: 5px;
+        }
+        .text-center {
+            text-align: center;
+        }
     }
-    section#dokumenter {
-        background-color: darkorange;
-    }
-    section#link {
-        background-color: lightblue;
-    }
-    section#marked {
-        background-color: dodgerblue;
-    }
-    section#events {
-        background-color: orange;
-    }
-}
-
-footer#main-footer {
-    background-color: #FFC63C;
-}
-
-main#nyheder {
-    .main-container {
-        margin: 25px auto 10px;
-        max-width: 1200px;
+    
+    .footer-container {
+        margin: auto;
+        max-width: 900px;
         width: 100%;
-        background-color: white;
-        padding: 10px 15px;
+        padding: 50px 0;
     }
-    img {
-        width: 100%;
+    
+    footer {
+        .border-right {
+            border-right: 1px solid black;
+        }
+        .text-center {
+            text-align: center;
+        }
     }
-    hr {
-        border-top: 2px dotted lightgrey;
+    
+    @media screen and (max-width: 991px) {
+        aside.d-none {
+            display: none;
+        }
     }
-}
-
-aside#sponsorer {
-    h4 {
-        font-size: 20px;
-        line-height: 60px;
-        background-color: lightgray;
-        border: 1px solid grey;
-        border-radius: 5px;
-    }
-    img {
-        border: 1px solid grey;
-        border-radius: 5px;
-        padding-top: 5px;
-    }
-    .text-center {
-        text-align: center;
-    }
-}
-
-.footer-container {
-    margin: auto;
-    max-width: 900px;
-    width: 100%;
-    padding: 50px 0;
-}
-
-footer {
-    .border-right {
-        border-right: 1px solid black;
-    }
-    .text-center {
-        text-align: center;
-    }
-}
-
-@media screen and (max-width: 991px) {
-    aside.d-none {
-        display: none;
-    }
-}
